-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 21, 22, 23
-
Component/s: hotspot
-
b08
-
ppc
-
aix
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8325721 | 22.0.1 | Matthias Baesken | P4 | Resolved | Fixed | b04 |
| JDK-8325720 | 21.0.3 | Matthias Baesken | P4 | Resolved | Fixed | b03 |
| JDK-8337459 | 17.0.13 | Matthias Baesken | P4 | Resolved | Fixed | b01 |
Unfortunately, this touches AIX code, we use there now the non-large-file functions which could be problematic.
See also https://www.ibm.com/docs/en/aix/7.1?topic=volumes-writing-programs-that-access-large-files .
Additional AIX 7.3 link for the same topic : https://www.ibm.com/docs/en/aix/7.3?topic=volumes-writing-programs-that-access-large-files
- backported by
-
JDK-8325720 [AIX] adjust os_posix after JDK-8318696
-
- Resolved
-
-
JDK-8325721 [AIX] adjust os_posix after JDK-8318696
-
- Resolved
-
-
JDK-8337459 [AIX] adjust os_posix after JDK-8318696
-
- Resolved
-
- relates to
-
JDK-8318696 Do not use LFS64 symbols on Linux
-
- Resolved
-
- links to
-
Commit
openjdk/jdk21u-dev/4031ff45
-
Commit
openjdk/jdk22u/4ab77119
-
Commit
openjdk/jdk/8950d68d
-
Commit(master)
openjdk/jdk17u-dev/f4e81948
-
Review
openjdk/jdk21u-dev/242
-
Review
openjdk/jdk22u/44
-
Review
openjdk/jdk/17587
-
Review(master)
openjdk/jdk17u-dev/2749