8324753: [AIX] adjust os_posix after JDK-8318696

Backport-of: 8950d68ddb36d35831fbb4b98969cd0537527070